[project]
name = "polar-signals-cloud-integrator-operator"
version = "0.1.0"
requires-python = ">=3.8.6"

dependencies = [
  "ops==2.17.0",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff==0.9.1",
  # Static
  "pyright<1.1.399", # 1.1.399 vendors typeshed that dropped Python 3.8 support
  # Unit
  "pytest==8.3.1",
  "coverage[toml]==6.5.0",
  # Integration
  "macaroonbakery==1.3.2",
  "pytest==8.3.1",
  "pytest-operator==0.39.0",
  "pytest-asyncio==0.21.2",
  "tenacity==9.0.0",
  "requests==2.32.3",
  "juju==3.6.1.0",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10
